--- a/server/src/main/resources/templates/calendar.html
+++ b/server/src/main/resources/templates/calendar.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Calendar - SuperFrog Scheduler</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../public/bootstrap/assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
-    <link rel="stylesheet" href="assets/css/fcicons.css">
-    <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
-    <link rel="stylesheet" href="assets/css/Features-Boxed.css">
-    <link rel="stylesheet" href="assets/css/index.css">
+    <link rel="stylesheet" href="../public/css/assets/css/fcicons.css">
+    <link rel="stylesheet" href="../public/fonts/assets/fonts/fontawesome-all.min.css">
+    <link rel="stylesheet" href="../public/fonts/assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="../public/fonts/assets/fonts/fontawesome5-overrides.min.css">
+    <link rel="stylesheet" href="../public/css/assets/css/Features-Boxed.css">
+    <link rel="stylesheet" href="../public/css/assets/css/index.css">
 
-    <link href='assets/js/fullcalendar/main.css' rel='stylesheet'/>
-    <script src='assets/js/fullcalendar/main.js'></script>
+    <link href='../public/js/assets/js/fullcalendar/main.css' rel='stylesheet'/>
+    <script src='../public/js/assets/js/fullcalendar/main.js'></script>
     <script>
 
         // FullCalendar.js documentation: https://fullcalendar.io/docs
@@ -93,7 +93,7 @@
                                                                        href="#"><span
                                     class="d-none d-lg-inline mr-2 text-gray-600 small">Riley Durbin</span><img
                                     class="border rounded-circle img-profile"
-                                    src="assets/img/avatars/Riley-headshot.jpg"></a>
+                                    src="../public/img/assets/img/avatars/Riley-headshot.jpg"></a>
                                 <div class="dropdown-menu shadow dropdown-menu-right animated--grow-in">
                                     <a class="dropdown-item" href="profile.html">
                                         <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Profile</a>
@@ -132,15 +132,15 @@
     </div>
     <a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a>
 </div>
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="../public/js/assets/js/jquery.min.js"></script>
+<script src="../public/bootstrap/assets/bootstrap/js/bootstrap.min.js"></script>
 
-<script src="assets/js/Bootstrap-DateTime-Picker-1.js"></script>
-<script src="assets/js/Bootstrap-DateTime-Picker-2.js"></script>
-<script src="assets/js/Bootstrap-DateTime-Picker.js"></script>
-<script src="assets/js/fullcalendar/main.js"></script>
+<script src="../public/js/assets/js/Bootstrap-DateTime-Picker-1.js"></script>
+<script src="../public/js/assets/js/Bootstrap-DateTime-Picker-2.js"></script>
+<script src="../public/js/assets/js/Bootstrap-DateTime-Picker.js"></script>
+<script src="../public/js/assets/js/fullcalendar/main.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
-<script src="assets/js/theme.js"></script>
+<script src="../public/js/assets/js/theme.js"></script>
 </body>
 
 </html>
