converted front end to thymeleaf

--- a/server/src/main/resources/templates/login.html
+++ b/server/src/main/resources/templates/login.html
@@ -5,16 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Login - SuperFrog Scheduler</title>
-    <link rel="stylesheet" href="../public/bootstrap/assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
-    <link rel="stylesheet" href="../public/css/assets/css/fcicons.css">
-    <link rel="stylesheet" href="../public/fonts/assets/fonts/fontawesome-all.min.css">
-    <link rel="stylesheet" href="../public/fonts/assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="../public/fonts/assets/fonts/fontawesome5-overrides.min.css">
-    <link rel="stylesheet" href="../public/css/assets/css/Features-Boxed.css">
-    <link rel="stylesheet" href="../public/css/assets/css/fullcalendar/main.css">
-    <link rel="stylesheet" href="../public/css/assets/css/index.css">
+    <link rel="stylesheet" href="/css/fcicons.css">
+    <link rel="stylesheet" href="/fonts/fontawesome-all.min.css">
+    <link rel="stylesheet" href="/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="/fonts/fontawesome5-overrides.min.css">
+    <link rel="stylesheet" href="/css/Features-Boxed.css">
+    <link rel="stylesheet" href="/css/fullcalendar/main.css">
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 
 <body class="bg-gradient-primary" style="background: var(--purple);">
@@ -25,14 +25,14 @@
                 <div class="card-body p-0">
                     <div class="row">
                         <div class="col-lg-6 d-none d-lg-flex justify-content-center"><img class="d-lg-flex"
-                                                                                           src="../public/img/assets/img/superfrog/superfrog.jpg">
+                                                                                           src="/img/superfrog/superfrog.jpg">
                         </div>
                         <div class="col-lg-6">
                             <div class="p-5">
                                 <div class="text-center">
                                     <h4 class="text-dark mb-4">Welcome Back!</h4>
                                 </div>
-                                <form class="user">
+                                <form class="user" th:action="@{/login}" method="post">
                                     <div class="form-group"><input class="form-control form-control-user" type="email"
                                                                    id="exampleInputEmail" aria-describedby="emailHelp"
                                                                    placeholder="Email" name="email"></div>
@@ -64,11 +64,11 @@
         </div>
     </div>
 </div>
-<script src="../public/js/assets/js/jquery.min.js"></script>
-<script src="../public/bootstrap/assets/bootstrap/js/bootstrap.min.js"></script>
-<script src="../public/js/assets/js/fullcalendar/main.js"></script>
+<script src="/js/jquery.min.js"></script>
+<script src="/bootstrap/js/bootstrap.min.js"></script>
+<script src="/js/fullcalendar/main.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
-<script src="../public/js/assets/js/theme.js"></script>
+<script src="/js/theme.js"></script>
 </body>
 
 </html>
