--- a/server/src/main/resources/templates/calendar.html
+++ b/server/src/main/resources/templates/calendar.html
@@ -5,18 +5,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Calendar - SuperFrog Scheduler</title>
-    <link rel="stylesheet" href="../public/bootstrap/assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
-    <link rel="stylesheet" href="../public/css/assets/css/fcicons.css">
-    <link rel="stylesheet" href="../public/fonts/assets/fonts/fontawesome-all.min.css">
-    <link rel="stylesheet" href="../public/fonts/assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="../public/fonts/assets/fonts/fontawesome5-overrides.min.css">
-    <link rel="stylesheet" href="../public/css/assets/css/Features-Boxed.css">
-    <link rel="stylesheet" href="../public/css/assets/css/index.css">
+    <link rel="stylesheet" href="/css/fcicons.css">
+    <link rel="stylesheet" href="/fonts/fontawesome-all.min.css">
+    <link rel="stylesheet" href="/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="/fonts/fontawesome5-overrides.min.css">
+    <link rel="stylesheet" href="/css/Features-Boxed.css">
+    <link rel="stylesheet" href="/css/index.css">
 
-    <link href='../public/js/assets/js/fullcalendar/main.css' rel='stylesheet'/>
-    <script src='../public/js/assets/js/fullcalendar/main.js'></script>
+    <link href='/js/fullcalendar/main.css' rel='stylesheet'/>
+    <script src='/js/fullcalendar/main.js'></script>
     <script>
 
         // FullCalendar.js documentation: https://fullcalendar.io/docs
@@ -132,15 +132,15 @@
     </div>
     <a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a>
 </div>
-<script src="../public/js/assets/js/jquery.min.js"></script>
-<script src="../public/bootstrap/assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="/js/jquery.min.js"></script>
+<script src="/bootstrap/js/bootstrap.min.js"></script>
 
-<script src="../public/js/assets/js/Bootstrap-DateTime-Picker-1.js"></script>
-<script src="../public/js/assets/js/Bootstrap-DateTime-Picker-2.js"></script>
-<script src="../public/js/assets/js/Bootstrap-DateTime-Picker.js"></script>
-<script src="../public/js/assets/js/fullcalendar/main.js"></script>
+<script src="/js/Bootstrap-DateTime-Picker-1.js"></script>
+<script src="/js/Bootstrap-DateTime-Picker-2.js"></script>
+<script src="/js/Bootstrap-DateTime-Picker.js"></script>
+<script src="/js/fullcalendar/main.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
-<script src="../public/js/assets/js/theme.js"></script>
+<script src="/js/theme.js"></script>
 </body>
 
 </html>
