fixed assets locations

--- a/server/src/main/resources/templates/calendar.html
+++ b/server/src/main/resources/templates/calendar.html
@@ -93,7 +93,7 @@
                                                                        href="#"><span
                                     class="d-none d-lg-inline mr-2 text-gray-600 small">Riley Durbin</span><img
                                     class="border rounded-circle img-profile"
-                                    src="../public/img/assets/img/avatars/Riley-headshot.jpg"></a>
+                                    src="/img/avatars/Riley-headshot.jpg"></a>
                                 <div class="dropdown-menu shadow dropdown-menu-right animated--grow-in">
                                     <a class="dropdown-item" href="profile.html">
                                         <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Profile</a>
