--- a/server/src/main/resources/templates/register.html
+++ b/server/src/main/resources/templates/register.html
@@ -5,16 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Register - SuperFrog Scheduler</title>
-    <link rel="stylesheet" href="../public/bootstrap/assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
-    <link rel="stylesheet" href="../public/css/assets/css/fcicons.css">
-    <link rel="stylesheet" href="../public/fonts/assets/fonts/fontawesome-all.min.css">
-    <link rel="stylesheet" href="../public/fonts/assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="../public/fonts/assets/fonts/fontawesome5-overrides.min.css">
-    <link rel="stylesheet" href="../public/css/assets/css/Features-Boxed.css">
-    <link rel="stylesheet" href="../public/css/assets/css/fullcalendar/main.css">
-    <link rel="stylesheet" href="../public/css/assets/css/index.css">
+    <link rel="stylesheet" href="/css/fcicons.css">
+    <link rel="stylesheet" href="/fonts/fontawesome-all.min.css">
+    <link rel="stylesheet" href="/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="/fonts/fontawesome5-overrides.min.css">
+    <link rel="stylesheet" href="/css/Features-Boxed.css">
+    <link rel="stylesheet" href="/css/fullcalendar/main.css">
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 
 <body class="bg-gradient-primary" style="background: var(--purple);">
@@ -65,11 +65,11 @@
         </div>
     </div>
 </div>
-<script src="../public/js/assets/js/jquery.min.js"></script>
-<script src="../public/bootstrap/assets/bootstrap/js/bootstrap.min.js"></script>
-<script src="../public/js/assets/js/fullcalendar/main.js"></script>
+<script src="/js/jquery.min.js"></script>
+<script src="/bootstrap/js/bootstrap.min.js"></script>
+<script src="/js/fullcalendar/main.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
-<script src="../public/js/assets/js/theme.js"></script>
+<script src="/js/theme.js"></script>
 </body>
 
 </html>
