--- a/server/src/main/resources/templates/SpiritDirectorTable.html
+++ b/server/src/main/resources/templates/SpiritDirectorTable.html
@@ -27,16 +27,11 @@
         </a>
             <hr class="sidebar-divider my-0">
             <ul class="navbar-nav text-light" id="accordionSidebar">
-                <li class="nav-item"><a class="nav-link" href="index.html"><i
-                        class="fa fa-home"></i><span>Home</span></a></li>
-                <li class="nav-item"><a class="nav-link" href="calendar.html"><i class="fa fa-calendar"></i><span>Calendar</span></a>
-                </li>
-                <li class="nav-item"><a class="nav-link active" href="SpiritDirectorTable.html"><i
-                        class="fas fa-table"></i><span>Table</span></a></li>
-                <li class="nav-item"><a class="nav-link" href="login.html"><i
-                        class="far fa-user-circle"></i><span>Login</span></a></li>
-                <li class="nav-item"><a class="nav-link" href="register.html"><i class="fas fa-user-circle"></i><span>Register</span></a>
-                </li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/}"><i class="fa fa-home"></i><span>Home</span></a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/calendar}"><i class="fa fa-calendar"></i><span>Calendar</span></a></li>
+                <li class="nav-item"><a class="nav-link active" th:href="@{/spiritdirectortable}"><i class="fas fa-table"></i><span>Table</span></a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/login}"><i class="far fa-user-circle"></i><span>Login</span></a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{register}"><i class="fas fa-user-circle"></i><span>Register</span></a></li>
                 <li class="nav-item"></li>
             </ul>
             <div class="text-center d-none d-md-inline">
