--- a/server/src/main/resources/templates/register.html
+++ b/server/src/main/resources/templates/register.html
@@ -23,7 +23,7 @@
         <div class="card-body p-0">
             <div class="row">
                 <div class="col-lg-5 d-none d-lg-flex justify-content-center"><img class="d-lg-flex"
-                                                                                   src="../public/img/assets/img/superfrog/superfrog.jpg">
+                                                                                   src="/img/superfrog/superfrog.jpg">
                 </div>
                 <div class="col-lg-7">
                     <div class="p-5">
