--- a/server/src/main/resources/templates/login.html
+++ b/server/src/main/resources/templates/login.html
@@ -52,9 +52,8 @@
                                     </button>
                                     <hr>
                                 </form>
-                                <div class="text-center"><a class="small" href="forgot-password.html">Forgot
-                                    Password?</a></div>
-                                <div class="text-center"><a class="small" href="register.html">Create an Account!</a>
+                                <div class="text-center"><a class="small" href="forgot-password.html">Forgot Password?</a></div>
+                                <div class="text-center"><a class="small" th:href="@{/register}">Create an Account!</a>
                                 </div>
                             </div>
                         </div>
