--- a/server/src/main/resources/templates/register.html
+++ b/server/src/main/resources/templates/register.html
@@ -30,30 +30,22 @@
                         <div class="text-center">
                             <h4 class="text-dark mb-4">Create an Account!</h4>
                         </div>
-                        <form class="user">
+                        <form class="user" th:action="@{/process_register}">
                             <div class="form-group row">
-                                <div class="col-sm-6 mb-3 mb-sm-0"><input class="form-control form-control-user"
-                                                                          type="text" id="exampleFirstName"
-                                                                          placeholder="First Name" name="first_name">
+                                <div class="col-sm-6 mb-3 mb-sm-0"><input class="form-control form-control-user" type="text" placeholder="First Name" name="first_name"></div>
+                                <div class="col-sm-6"><input class="form-control form-control-user" type="text" placeholder="Last Name" name="last_name"></div>
+                            </div>
+                            <div class="form-group">
+                                <input class="form-control form-control-user" type="email" aria-describedby="emailHelp" placeholder="Email Address" name="email"></div>
+                            <div class="form-group row">
+                                <div class="col-sm-6 mb-3 mb-sm-0">
+                                    <input class="form-control form-control-user" type="password" placeholder="Password" name="password">
                                 </div>
-                                <div class="col-sm-6"><input class="form-control form-control-user" type="text"
-                                                             id="exampleFirstName" placeholder="Last Name"
-                                                             name="last_name"></div>
+                                <div class="col-sm-6">
+                                    <input class="form-control form-control-user" type="password" placeholder="Repeat Password" name="password_repeat">
+                                </div>
                             </div>
-                            <div class="form-group"><input class="form-control form-control-user" type="email"
-                                                           id="exampleInputEmail" aria-describedby="emailHelp"
-                                                           placeholder="Email Address" name="email"></div>
-                            <div class="form-group row">
-                                <div class="col-sm-6 mb-3 mb-sm-0"><input class="form-control form-control-user"
-                                                                          type="password" id="examplePasswordInput"
-                                                                          placeholder="Password" name="password"></div>
-                                <div class="col-sm-6"><input class="form-control form-control-user" type="password"
-                                                             id="exampleRepeatPasswordInput"
-                                                             placeholder="Repeat Password" name="password_repeat"></div>
-                            </div>
-                            <button class="btn btn-primary btn-block text-white btn-user" type="submit"
-                                    style="background: var(--purple);">Register Account
-                            </button>
+                            <button class="btn btn-primary btn-block text-white btn-user" type="submit" style="background: var(--purple);">Register Account</button>
                             <hr>
                         </form>
                         <div class="text-center"><a class="small" href="forgot-password.html">Forgot Password?</a></div>
