--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -30,16 +30,20 @@
                         <div class="text-center">
                             <h4 class="text-dark mb-4">Create an Account!</h4>
                         </div>
-                        <form class="user" th:action="@{/process_register}">
-                            <div class="form-group row">
-                                <div class="col-sm-6 mb-3 mb-sm-0"><input class="form-control form-control-user" type="text" placeholder="First Name" name="first_name"></div>
-                                <div class="col-sm-6"><input class="form-control form-control-user" type="text" placeholder="Last Name" name="last_name"></div>
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control form-control-user" type="email" aria-describedby="emailHelp" placeholder="Email Address" name="email"></div>
+                        <form class="user" th:action="@{/process_register}" method="post" th:object="${user}">
                             <div class="form-group row">
                                 <div class="col-sm-6 mb-3 mb-sm-0">
-                                    <input class="form-control form-control-user" type="password" placeholder="Password" name="password">
+                                    <input class="form-control form-control-user" type="text" th:field="*{firstName}" placeholder="First Name" name="first_name">
+                                </div>
+                                <div class="col-sm-6">
+                                    <input class="form-control form-control-user" type="text" th:field="*{lastName}" placeholder="Last Name" name="last_name">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <input class="form-control form-control-user" type="email" th:field="*{email}" aria-describedby="emailHelp" placeholder="Email Address" name="email"></div>
+                            <div class="form-group row">
+                                <div class="col-sm-6 mb-3 mb-sm-0">
+                                    <input class="form-control form-control-user" type="password" th:field="*{password}" placeholder="Password" name="password">
                                 </div>
                                 <div class="col-sm-6">
                                     <input class="form-control form-control-user" type="password" placeholder="Repeat Password" name="password_repeat">
@@ -49,7 +53,7 @@
                             <hr>
                         </form>
                         <div class="text-center"><a class="small" href="forgot-password.html">Forgot Password?</a></div>
-                        <div class="text-center"><a class="small" href="login.html">Already have an account? Login!</a>
+                        <div class="text-center"><a class="small" th:href="@{/login}">Already have an account? Login!</a>
                         </div>
                     </div>
                 </div>
