--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -33,6 +33,12 @@
                                     <h4 class="text-dark mb-4">Welcome Back!</h4>
                                 </div>
                                 <form class="user" th:action="@{/login}" method="post">
+                                    <div th:if="${param.error}" style="color: red">
+                                        Invalid username or password.
+                                    </div>
+                                    <div th:if="${param.logout}">
+                                        You have been logged out.
+                                    </div>
                                     <div class="form-group"><input class="form-control form-control-user" type="email"
                                                                    id="exampleInputEmail" aria-describedby="emailHelp"
                                                                    placeholder="Email" name="email"></div>
@@ -52,7 +58,8 @@
                                     </button>
                                     <hr>
                                 </form>
-                                <div class="text-center"><a class="small" href="forgot-password.html">Forgot Password?</a></div>
+                                <div class="text-center"><a class="small" href="forgot-password.html">Forgot
+                                    Password?</a></div>
                                 <div class="text-center"><a class="small" th:href="@{/register}">Create an Account!</a>
                                 </div>
                             </div>
