--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,11 +28,11 @@
         </a>
             <hr class="sidebar-divider my-0">
             <ul class="navbar-nav text-light" id="accordionSidebar">
-                <li class="nav-item"><a class="nav-link active" th:href="@{/}"><i class="fa fa-home"></i><span>Home</span></a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/calendar}"><i class="fa fa-calendar"></i><span>Calendar</span></a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/}"><i class="fa fa-home"></i><span>Home</span></a></li>
+                <li class="nav-item"><a class="nav-link active" th:href="@{/calendar}"><i class="fa fa-calendar"></i><span>Calendar</span></a></li>
                 <li class="nav-item"><a class="nav-link" th:href="@{/spiritdirectortable}"><i class="fas fa-table"></i><span>Table</span></a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/login}"><i class="far fa-user-circle"></i><span>Login</span></a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{register}"><i class="fas fa-user-circle"></i><span>Register</span></a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/dashboard}"><i class="far fa-user-circle"></i><span>Dashboard</span></a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{tcuevent}"><i class="fas fa-user-circle"></i><span>Tcu Event</span></a></li>
                 <li class="nav-item"></li>
             </ul>
             <div class="text-center d-none d-md-inline">
@@ -48,10 +48,12 @@
                             class="fas fa-bars"></i></button>
                     <ul class="navbar-nav flex-nowrap ml-auto">
                         <li class="nav-item dropdown no-arrow">
-                            <div class="nav-item dropdown no-arrow">
-                                <a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown" href="#">
-                                <span class="d-none d-lg-inline mr-2 text-gray-600 small" th:text="${user.getFirstName() + ' ' + user.getLastName()}"></span>
-                                <img class="border rounded-circle img-profile" src="/img/avatars/Riley-headshot.jpg"></a>
+                            <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link"
+                                                                       aria-expanded="false" data-toggle="dropdown"
+                                                                       href="#"><span
+                                    class="d-none d-lg-inline mr-2 text-gray-600 small">Riley Durbin</span><img
+                                    class="border rounded-circle img-profile"
+                                    src="/img/avatars/Riley-headshot.jpg"></a>
                                 <div class="dropdown-menu shadow dropdown-menu-right animated--grow-in">
                                     <a class="dropdown-item" href="profile.html">
                                         <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Profile</a>
