--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -67,10 +67,11 @@
                         <li class="nav-item dropdown no-arrow">
                             <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link"
                                                                        aria-expanded="false" data-toggle="dropdown"
-                                                                       href="#"><span
-                                    class="d-none d-lg-inline mr-2 text-gray-600 small">Riley Durbin</span><img
+                                                                       href="#">
+                                <span class="d-none d-lg-inline mr-2 text-gray-600 small" th:text="${user.getFirstName() + ' ' + user.getLastName()}"></span>
+                                <img
                                     class="border rounded-circle img-profile"
-                                    src="/img/avatars/Riley-headshot.jpg"></a>
+                                    src="/img/profilepicture.png"></a>
                                 <div class="dropdown-menu shadow dropdown-menu-right animated--grow-in">
                                     <a class="dropdown-item" href="profile.html">
                                         <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Profile</a>
