--- a/src/main/resources/templates/SpiritDirectorTable.html
+++ b/src/main/resources/templates/SpiritDirectorTable.html
@@ -65,12 +65,10 @@
 
                         <div class="d-none d-sm-block topbar-divider"></div>
                         <li class="nav-item dropdown no-arrow">
-                            <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link"
-                                                                       aria-expanded="false" data-toggle="dropdown"
-                                                                       href="#"><span
-                                    class="d-none d-lg-inline mr-2 text-gray-600 small">Riley Durbin</span><img
-                                    class="border rounded-circle img-profile"
-                                    src="/img/avatars/Riley-headshot.jpg"></a>
+                            <div class="nav-item dropdown no-arrow">
+                                <a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown" href="#">
+                                    <span class="d-none d-lg-inline mr-2 text-gray-600 small" th:text="${user.getFirstName() + ' ' + user.getLastName()}"></span>
+                                    <img class="border rounded-circle img-profile" src="/img/profilepicture.png"></a>
                                 <div class="dropdown-menu shadow dropdown-menu-right animated--grow-in">
                                     <a class="dropdown-item" href="profile.html">
                                         <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Profile</a>
@@ -78,8 +76,8 @@
                                         <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Settings</a>
 
                                     <div class="dropdown-divider"></div>
-
-                                    <a class="dropdown-item" href="#">
+                                    <form method="post" th:action="@{/logout}">
+                                        <a class="dropdown-item" th:href="@{/login}">
                                         <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Logout</a>
                                 </div>
                             </div>
