--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -48,19 +48,10 @@
                             class="fas fa-bars"></i></button>
                     <ul class="navbar-nav flex-nowrap ml-auto">
                         <li class="nav-item dropdown no-arrow">
-<<<<<<< HEAD
                             <div class="nav-item dropdown no-arrow">
                                 <a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown" href="#">
                                 <span class="d-none d-lg-inline mr-2 text-gray-600 small" th:text="${user.getFirstName() + ' ' + user.getLastName()}"></span>
                                 <img class="border rounded-circle img-profile" src="/img/profilepicture.png"></a>
-=======
-                            <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link"
-                                                                       aria-expanded="false" data-toggle="dropdown"
-                                                                       href="#"><span
-                                    class="d-none d-lg-inline mr-2 text-gray-600 small">Riley Durbin</span><img
-                                    class="border rounded-circle img-profile"
-                                    src="/img/avatars/Riley-headshot.jpg"></a>
->>>>>>> 26a847d2eaf1cacca2c1f6745a066da40069fb5b
                                 <div class="dropdown-menu shadow dropdown-menu-right animated--grow-in">
                                     <a class="dropdown-item" href="profile.html">
                                         <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Profile</a>
@@ -68,8 +59,8 @@
                                         <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Settings</a>
 
                                     <div class="dropdown-divider"></div>
-
-                                    <a class="dropdown-item" href="#">
+                                    <form method="post" th:action="@{/logout}">
+                                        <a class="dropdown-item" th:href="@{/login}">
                                         <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Logout</a>
                                 </div>
                             </div>
