--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -79,8 +79,8 @@
                                         <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Settings</a>
 
                                     <div class="dropdown-divider"></div>
-
-                                    <a class="dropdown-item" href="#">
+                                    <form method="post" th:action="@{/logout}">
+                                        <a class="dropdown-item" th:href="@{/login}">
                                         <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Logout</a>
                                 </div>
                             </div>
