--- a/src/main/resources/templates/register_success.html
+++ b/src/main/resources/templates/register_success.html
@@ -28,7 +28,7 @@
                 <div class="col-lg-7">
                     <div class="p-5">
                         <div class="text-center">
-                            <h4 class="text-dark mb-4">You have signed up successfull</h4>
+                            <h4 class="text-dark mb-4">You have signed up successfully</h4>
                         </div>
                         <div class="text-center"><a class="small" th:href="@{/login}">Login!</a>
                         </div>
