added superfrog table

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -107,7 +107,7 @@
                                                 </div>
                                                 <div class="col">
                                                     <div class="form-group"><label for="tel">
-                                                        <strong>Email Address</strong></label>
+                                                        <strong>Phone Number</strong></label>
                                                         <input type="email" class="form-control" id="tel" th:value="${user.getPhoneNumber()}" name="tel" />
                                                     </div>
                                                 </div>
