--- a/src/main/resources/templates/spiritdirectortable.html
+++ b/src/main/resources/templates/spiritdirectortable.html
@@ -84,50 +84,18 @@
                 </div>
             </nav>
             <div class="container-fluid">
-                <h3 class="text-dark mb-4" style="color: var(--purple);">Current Customer Information</h3>
-                <div class="card" style="margin-bottom: 10px;">
-                    <div class="card-body">
-                        <h4 class="card-title" style="font-size: 18px;">Add a new customer here:</h4>
-                        <form class="d-lg-flex justify-content-lg-center">
-                            <input class="form-control" id="id" type="text" placeholder="ID" style="margin-left: 5px;">
-                            <input class="form-control" id="name" type="text" placeholder="Name"
-                                   style="margin-left: 5px;">
-                            <input class="form-control" id="tel" type="text" placeholder="Phone"
-                                   style="margin-left: 5px;">
-                            <input class="form-control" id="email" type="text" placeholder="Email"
-                                   style="margin-left: 5px;">
-                            <button id="btn_add" class="btn btn-primary" type="button"
-                                    style="margin-left: 5px;background: rgb(68,180,50);">Add
-                            </button>
-                        </form>
-                    </div>
-                </div>
+                <h3 class="text-dark mb-4" style="color: var(--purple);">Customer Information</h3>
                 <div class="card shadow">
                     <div class="card-body">
-                        <div class="row">
-                            <div class="col-md-6 text-nowrap">
-                                <div id="dataTable_length" class="dataTables_length" aria-controls="dataTable"><label>Show&nbsp;<select
-                                        class="form-control form-control-sm custom-select custom-select-sm">
-                                    <option value="10" selected="">10</option>
-                                    <option value="25">25</option>
-                                    <option value="50">50</option>
-                                    <option value="100">100</option>
-                                </select>&nbsp;</label></div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="text-md-right dataTables_filter" id="dataTable_filter"><label><input
-                                        type="search" class="form-control form-control-sm" aria-controls="dataTable"
-                                        placeholder="Search"></label></div>
-                            </div>
-                        </div>
                         <div class="table-responsive table mt-2" id="dataTable" role="grid"
-                             aria-describedby="dataTable_info">
+                             aria-describedby="dataTable_info" style="font-size: 18px;">
                             <table class="table my-0" id="dataTable">
                                 <thead>
                                     <tr>
                                         <th>ID</th>
                                         <th>Name</th>
                                         <th>Email</th>
+                                        <th>Phone</th>
                                         <th class="text-center">Operation</th>
                                     </tr>
                                 </thead>
@@ -136,6 +104,7 @@
                                         <td th:text="${customer.getId()}"></td>
                                         <td th:text="${customer.getFirstName() + ' ' + customer.getLastName()}"></td>
                                         <td th:text="${customer.getEmail()}"></td>
+                                        <td th:text="${customer.getPhoneNumber()}"></td>
                                         <td class="text-center d-lg-flex justify-content-lg-center">
                                             <button class="btn btn-primary" type="button"
                                                     style="margin-left: 0px;margin-right: 5px;">Edit
@@ -155,32 +124,187 @@
                                         <td><strong>ID</strong></td>
                                         <td><strong>Name</strong></td>
                                         <td><strong>Email</strong></td>
+                                        <td><strong>Phone</strong></td>
                                         <td class="text-center"><strong>Operation</strong></td>
                                     </tr>
                                 </tfoot>
                             </table>
                         </div>
+                    </div>
+                </div>
+
+                <hr/>
+
+                <h3 class="text-dark mb-4" style="color: var(--purple); padding-top: 20px;">SuperFrog Information</h3>
+                <div class="card" style="margin-bottom: 10px;">
+                    <div class="card-body">
+                        <h4 class="card-title" style="font-size: 18px;">Add a new SuperFrog here:</h4>
                         <div class="row">
-                            <div class="col-md-6 align-self-center">
-                                <p id="dataTable_info" class="dataTables_info" role="status" aria-live="polite">Showing
-                                    1 to 2 of 2</p>
-                            </div>
-                            <div class="col-md-6">
-                                <nav class="d-lg-flex justify-content-lg-end dataTables_paginate paging_simple_numbers">
-                                    <ul class="pagination">
-                                        <li class="page-item disabled"><a class="page-link" href="#"
-                                                                          aria-label="Previous"><span
-                                                aria-hidden="true">«</span></a></li>
-                                        <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                                        <li class="page-item"><a class="page-link" href="#" aria-label="Next"><span
-                                                aria-hidden="true">»</span></a></li>
-                                    </ul>
-                                </nav>
-                            </div>
+                            <form class="d-lg-flex justify-content-lg-center">
+                                <div class="col">
+                                    <input class="form-control" id="firstname" type="text" placeholder="First Name" style="margin-left: 5px;">
+                                </div>
+                                <div class="col">
+                                    <input class="form-control" id="lastname" type="text" placeholder="Last Name" style="margin-left: 5px;">
+                                </div>
+                                <div class="col">
+                                    <input class="form-control" id="email" type="text" placeholder="Email" style="margin-left: 5px;">
+                                </div>
+                                <div class="col">
+                                    <input class="form-control" id="tel" type="text" placeholder="Phone Number" style="margin-left: 5px;">
+                                </div>
+                                <button id="btn_add" class="btn btn-primary" type="button"
+                                        style="margin-left: 5px;background: rgb(68,180,50);">Add
+                                </button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="card shadow">
+                    <div class="card-body">
+                        <div class="table-responsive table mt-2" id="dataTable" role="grid"
+                             aria-describedby="dataTable_info" style="font-size: 18px;">
+                            <table class="table my-0" id="dataTable">
+                                <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Name</th>
+                                    <th>Email</th>
+                                    <th>Phone</th>
+                                    <th class="text-center">Operation</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr th:each="superfrog: ${superfrogs}">
+                                    <td th:text="${superfrog.getId()}"></td>
+                                    <td th:text="${superfrog.getFirstName() + ' ' + superfrog.getLastName()}"></td>
+                                    <td th:text="${superfrog.getEmail()}"></td>
+                                    <td th:text="${superfrog.getPhoneNumber()}"></td>
+                                    <td class="text-center d-lg-flex justify-content-lg-center">
+                                        <button class="btn btn-primary" type="button"
+                                                style="margin-left: 0px;margin-right: 5px;">Edit
+                                        </button>
+                                        <button class="btn btn-primary" type="button"
+                                                style="margin-right: 5px;background: var(--red);"
+                                                href="javascript:void(0);" onclick="delTr(this);"></a>Delete
+                                        </button>
+                                        <button class="btn btn-primary" type="button"
+                                                style="margin-right: 5px;background: var(--green);"
+                                                href="javascript:void(0);" onclick="approve(this);"></a>Approve
+                                        </button>
+                                </tr>
+                                </tbody>
+                                <tfoot>
+                                <tr>
+                                    <td><strong>ID</strong></td>
+                                    <td><strong>Name</strong></td>
+                                    <td><strong>Email</strong></td>
+                                    <td><strong>Phone</strong></td>
+                                    <td class="text-center"><strong>Operation</strong></td>
+                                </tr>
+                                </tfoot>
+                            </table>
                         </div>
                     </div>
                 </div>
             </div>
+
+<!--            <div class="container-fluid">-->
+<!--                <h3 class="text-dark mb-4" style="color: var(&#45;&#45;purple);"SuperFrog Information</h3>-->
+<!--                <div class="card" style="margin-bottom: 10px;">-->
+<!--                    <div class="card-body">-->
+<!--                        <h4 class="card-title" style="font-size: 18px;">Add a new customer here:</h4>-->
+<!--                        <form class="d-lg-flex justify-content-lg-center">-->
+<!--                            <input class="form-control" id="id" type="text" placeholder="ID" style="margin-left: 5px;">-->
+<!--                            <input class="form-control" id="name" type="text" placeholder="Name"-->
+<!--                                   style="margin-left: 5px;">-->
+<!--                            <input class="form-control" id="email" type="text" placeholder="Email"-->
+<!--                                   style="margin-left: 5px;">-->
+<!--                            <button id="btn_add" class="btn btn-primary" type="button"-->
+<!--                                    style="margin-left: 5px;background: rgb(68,180,50);">Add-->
+<!--                            </button>-->
+<!--                        </form>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="card shadow">-->
+<!--                    <div class="card-body">-->
+<!--                        <div class="row">-->
+<!--                            <div class="col-md-6 text-nowrap">-->
+<!--                                <div id="dataTable_length" class="dataTables_length" aria-controls="dataTable"><label>Show&nbsp;<select-->
+<!--                                        class="form-control form-control-sm custom-select custom-select-sm">-->
+<!--                                    <option value="10" selected="">10</option>-->
+<!--                                    <option value="25">25</option>-->
+<!--                                    <option value="50">50</option>-->
+<!--                                    <option value="100">100</option>-->
+<!--                                </select>&nbsp;</label></div>-->
+<!--                            </div>-->
+<!--                            <div class="col-md-6">-->
+<!--                                <div class="text-md-right dataTables_filter" id="dataTable_filter"><label><input-->
+<!--                                        type="search" class="form-control form-control-sm" aria-controls="dataTable"-->
+<!--                                        placeholder="Search"></label></div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="table-responsive table mt-2" id="dataTable" role="grid"-->
+<!--                             aria-describedby="dataTable_info">-->
+<!--                            <table class="table my-0" id="dataTable">-->
+<!--                                <thead>-->
+<!--                                <tr>-->
+<!--                                    <th>ID</th>-->
+<!--                                    <th>Name</th>-->
+<!--                                    <th>Email</th>-->
+<!--                                    <th class="text-center">Operation</th>-->
+<!--                                </tr>-->
+<!--                                </thead>-->
+<!--                                <tbody>-->
+<!--                                <tr th:each="superfrog: ${superfrogs}">-->
+<!--                                    <td th:text="${superfrog.getId()}"></td>-->
+<!--                                    <td th:text="${superfrog.getFirstName() + ' ' + superfrog.getLastName()}"></td>-->
+<!--                                    <td th:text="${superfrog.getEmail()}"></td>-->
+<!--                                    <td class="text-center d-lg-flex justify-content-lg-center">-->
+<!--                                        <button class="btn btn-primary" type="button"-->
+<!--                                                style="margin-left: 0px;margin-right: 5px;">Edit-->
+<!--                                        </button>-->
+<!--                                        <button class="btn btn-primary" type="button"-->
+<!--                                                style="margin-right: 5px;background: var(&#45;&#45;red);"-->
+<!--                                                href="javascript:void(0);" onclick="delTr(this);"></a>Delete-->
+<!--                                        </button>-->
+<!--                                        <button class="btn btn-primary" type="button"-->
+<!--                                                style="margin-right: 5px;background: var(&#45;&#45;green);"-->
+<!--                                                href="javascript:void(0);" onclick="approve(this);"></a>Approve-->
+<!--                                        </button>-->
+<!--                                </tr>-->
+<!--                                </tbody>-->
+<!--                                <tfoot>-->
+<!--                                <tr>-->
+<!--                                    <td><strong>ID</strong></td>-->
+<!--                                    <td><strong>Name</strong></td>-->
+<!--                                    <td><strong>Email</strong></td>-->
+<!--                                    <td class="text-center"><strong>Operation</strong></td>-->
+<!--                                </tr>-->
+<!--                                </tfoot>-->
+<!--                            </table>-->
+<!--                        </div>-->
+<!--                        <div class="row">-->
+<!--                            <div class="col-md-6 align-self-center">-->
+<!--                                <p id="dataTable_info" class="dataTables_info" role="status" aria-live="polite">Showing-->
+<!--                                    1 to 2 of 2</p>-->
+<!--                            </div>-->
+<!--                            <div class="col-md-6">-->
+<!--                                <nav class="d-lg-flex justify-content-lg-end dataTables_paginate paging_simple_numbers">-->
+<!--                                    <ul class="pagination">-->
+<!--                                        <li class="page-item disabled"><a class="page-link" href="#"-->
+<!--                                                                          aria-label="Previous"><span-->
+<!--                                                aria-hidden="true">«</span></a></li>-->
+<!--                                        <li class="page-item active"><a class="page-link" href="#">1</a></li>-->
+<!--                                        <li class="page-item"><a class="page-link" href="#" aria-label="Next"><span-->
+<!--                                                aria-hidden="true">»</span></a></li>-->
+<!--                                    </ul>-->
+<!--                                </nav>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
         </div>
         <footer class="bg-white sticky-footer">
             <div class="container my-auto">
